istio/virtual_service_v2_for_chrome.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sockshop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
  - route:
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v1
    - headers:
        user-agent:
          regex: ".*Firefox.*"
  - route:
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v2
    - headers:
        user-agent:
          regex: ".*Explorer.*"
  - route:
    - destination:
        host: front-end.production.svc.cluster.local
        subset: v3
